--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
   padding: 2rem;
   text-align: center;
 }
+
+.showColorTable > tr:nth-child(odd) {
+  background-color: #333;
+}
+
+.showColorTable > tr:nth-child(even) {
+  background-color: #555;
+}
+
+.pointer {
+  cursor: crosshair;
+}
