--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ header {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 h1 {
@@ -74,6 +74,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+table {
+  width: 100%;
+  padding: 2rem;
+  text-align: center;
 }
 
 table thead tr > th {
